feature(security): add token to identify client

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,6 +26,8 @@ services:
     App\Controller\:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
+        bind:
+            $slackToken: '%env(SLACK_TOKEN)%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
