--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
+        bind:
+            $password: '%env(PASSWORD)%'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
