chore(redis): add redis cache

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-redis": "*",
         "doctrine/annotations": "^1.12",
+        "snc/redis-bundle": "3.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
